--- a/css/style.css
+++ b/css/style.css
@@ -370,6 +370,11 @@ img {
     background-color: #2196F3;
 }
 
+.social-icons-link:hover .social-icons-svg,
+.social-icons-link:focus .social-icons-svg {
+    fill: #fff;
+}
+
 .social-icons-svg {
     width: 20px;
     height: 20px;
