--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ p {
     margin: 0;
 }
 
+h2 {
+    margin-bottom: 50px;
+}
+
 img {
     display: block;
     max-width: 100%;
@@ -112,7 +116,7 @@ img {
 }
 
 .header-link-style:hover,
-.header-link-style:active {
+.header-link-style:focus {
     color: var(--color-sea);
 }
 
@@ -140,21 +144,16 @@ img {
     text-decoration: none;
     padding-top: 30px;
     padding-bottom: 30px;
-    display: inline-flex;
+    display: flex;
+    align-items: center;
 }
 
 .link-contacts-envelope {
-    width: 16px;
-    height: 12px;
     margin-right: 10px;
-    margin-top: 4px;
 }
 
 .link-contacts-smartphone {
-    width: 10px;
-    height: 16px;
     margin-right: 10px;
-    margin-top: 2px;
 }
 
 .link-contacts-smartphone:hover,
@@ -167,8 +166,10 @@ img {
 }
 
 .notions {
-    display: inline-flex;
+    display: flex;
     margin-right: auto;
+    margin-left: auto;
+    justify-content: center;
     padding: 0;
 }
 
@@ -178,17 +179,13 @@ img {
 }
 
 .notions-svg {
-    display: flex;
-}
-
-.notions-svg-list {
     display: inline-flex;
     padding: 25px 100px;
     background-color: #F5F4FA;
     margin-bottom: 30px;
 }
 
-.notions-svg-list:not(:last-child) {
+.notions-svg:not(:last-child) {
     margin-right: 30px;
 }
 
@@ -209,8 +206,7 @@ img {
 .main-section {
     padding-top: 200px;
     padding-bottom: 200px;
-    background-color: #2F303A;
-    background-image: url(../image/1/bgcmain.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/1/bgcmain.jpg);
 }
 
 .main-title {
@@ -250,7 +246,7 @@ img {
     font-weight: var(--font-weight-bold);
     font-size: 14px;
     line-height: 1.14;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .ul-title-par {
@@ -318,6 +314,7 @@ img {
     font-size: 18px;
     margin-top: 20px;
     margin-bottom: 5px;
+    color: #212121;
 }
 
 .section-title-par {
@@ -325,7 +322,6 @@ img {
     font-weight: var(--font-weight-regular);
     font-size: 16px;
     color: #757575;
-    margin-bottom: 20px;
 }
 
 .section-list-team {
@@ -358,6 +354,7 @@ img {
     justify-content: center;
     margin-right: auto;
     margin-left: auto;
+    padding-top: 16px;
 }
 
 .social-icons-link {
@@ -409,19 +406,38 @@ img {
     border: 1px solid #AFB1B8;
     border-radius: 4px;
     margin-right: 30px;
+    align-items: center;
 }
 
 .regular-customers-item-list:last-child {
     margin-right: 0;
 }
 
-.regular-customers-item-list:hover,
-.regular-customers-item-list:focus {
+.regular-customers-item-link {
+    display: flex;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+}
+
+.regular-customers-item-link:hover,
+.regular-customers-item-link:focus {
     border: 1px solid #2196F3;
+}
+
+.regular-customers-item-link:hover .regular-icons-svg-use,
+.regular-customers-item-link:focus .regular-icons-svg-use {
+    fill: #2196F3;
 }
 
 .regular-customers-item-list:hover .regular-icons-svg-use,
 .regular-customers-item-list:focus .regular-icons-svg-use {
+    fill: #2196F3;
+}
+
+.regular-icons-svg:hover,
+.regular-icons-svg:focus {
     fill: #2196F3;
 }
 
@@ -516,6 +532,9 @@ img {
     font-family: var(--font-family-Rob);
     font-size: 14px;
     padding-bottom: 20px;
+    text-transform: uppercase;
+    letter-spacing: 3%;
+    line-height: 16, 41px;
 }
 
 .footer-social-icons-svg {
@@ -542,6 +561,7 @@ img {
 .list-container {
     justify-content: space-between;
     display: -webkit-inline-box;
+    position: static;
 }
 
 .filters-btn-list {
@@ -559,9 +579,11 @@ img {
     display: inline-flex;
     border-radius: 4px;
     background-color: #F5F4FA;
+    border: none;
 }
 
-.filters-btn:hover {
+.filters-btn:hover,
+.filters-btn:focus {
     background: var(--color-sea);
     color: var(--color-white);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -575,10 +597,12 @@ img {
     display: inline-block;
     margin-right: 30px;
     margin-bottom: 30px;
+    box-sizing: border-box;
 }
 
 .list-offers-border {
     border: 1px solid #EEEEEE;
+    padding: 24px 20px;
 }
 
 .list-offers:nth-child(n+7) {
@@ -587,4 +611,14 @@ img {
 
 .list-offers:nth-child(3n+3) {
     margin-right: 0;
+}
+
+.list-offers-link {
+    text-decoration: none;
+    display: inline-block;
+}
+
+.list-offers-link:hover,
+.list-offers-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
